Bug 157568 - After deleting the content of a cell by pressing the delete key, Orca still speaks the content.
Summary: After deleting the content of a cell by pressing the delete key, Orca still s...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.2.1 release
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: accessibility, bibisected, bisected, regression
: 157616 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-10-03 10:02 UTC by Milton
Modified: 2023-10-07 23:33 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Milton 2023-10-03 10:02:50 UTC
Description:
Calc

Steps to Reproduce:
1. type some data in cell a1.
2. press Enter to confirm and return to cell A1.
3. press the delete key to delete the data.

Actual Results:
Orca still reads the data.

Expected Results:
Orca should say 'empty A1'.


Reproducible: Always


User Profile Reset: No

Additional Info:
Pressing F2 on A1 to enter the content there is indeed no data. LibreOffice 7.4 works as expected, so maybe a regression?
Version: 7.6.2.1 (X86_64) / LibreOffice Community
Build ID: 60(Build:1)
CPU threads: 4; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: nl-NL (nl_NL.UTF-8); UI: nl-NL
Ubuntu package version: 4:7.6.2~rc1-0ubuntu0.22.04.1~lo1
Calc: threaded
Comment 1 raal 2023-10-03 19:28:20 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.6.
Adding Cc: to Patrick Luby ; Could you possibly take a look at this one?
Thanks
 5010d0bd86d13e4c5ad7bed6b6da80d7dad0abc3 is the first bad commit
commit 5010d0bd86d13e4c5ad7bed6b6da80d7dad0abc3
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Jun 14 18:03:31 2023 +0200

    source c8a8b8e3a03a02c7ee0b616eb728103fb7cefad0

153025: tdf#155376 weakly cache ScAccessibleCell | https://gerrit.libreoffice.org/c/core/+/153025
Comment 2 Patrick (volunteer) 2023-10-03 21:32:18 UTC
(In reply to raal from comment #1)
> 153025: tdf#155376 weakly cache ScAccessibleCell |
> https://gerrit.libreoffice.org/c/core/+/153025
Comment 3 Patrick (volunteer) 2023-10-03 21:35:18 UTC
(In reply to Patrick Luby from comment #2)
> (In reply to raal from comment #1)
> > 153025: tdf#155376 weakly cache ScAccessibleCell |
> > https://gerrit.libreoffice.org/c/core/+/153025

I can also reproduce this on macOS by enabling VoiceOver. After deleting the cell, moving back into the cell will echo the "pre-deleted" content in VoiceOver.

@Noel Any thoughts? My first guess is that the accessible cell cache is not getting notified of deleted cells.
Comment 4 Noel Grandin 2023-10-07 09:46:37 UTC
fix is https://gerrit.libreoffice.org/c/core/+/157673
Comment 5 Commit Notification 2023-10-07 14:15:24 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8e886993f32b7db11a99bdecf06451e6de6c3842

tdf#157568 After deleting the content of a cell by pressing the delete..

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Patrick (volunteer) 2023-10-07 17:55:51 UTC
I can confirm that the fix works in my local macOS build:

Version: 24.2.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: 8e886993f32b7db11a99bdecf06451e6de6c3842
CPU threads: 8; OS: macOS 14.0; UI render: Skia/Metal; VCL: osx
Locale: en-CA (en_CA.UTF-8); UI: en-US
Calc: threaded

I also did some light memory leak analysis and I do not see any leaking of iVCL native accessibility objects so all looks good to me.
Comment 7 Michael Weghorn 2023-10-07 22:45:18 UTC
*** Bug 157616 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2023-10-07 23:33:16 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/bf421456ac92b695e8a8e40d0d434c8e52782f90

tdf#157568 After deleting the content of a cell by pressing the delete..

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.