tdf#157568 After deleting the content of a cell by pressing the delete..

.. key, Orca still speaks the content.

this reverts
    commit f22cb3dfab413a2917cd810b8e1b8f644a016327
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Mon Jun 12 20:02:19 2023 +0200
    tdf#155376 weakly cache ScAccessibleCell

which was a nice idea, but means that we would need to have
some way of updating the ScAccessibleCell when the associated
cell data changes. Which is likely to be complicated.

So return to creating new ScAccessibleCell objects all the time,
but fix them to not leak.

Change-Id: Ie17ee5c950c9809d4c7281f93761584f75256121
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157673
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>