sc/source/ui/Accessibility/AccessibleContextBase.cxx
@@ -36,6 +36,37 @@
 using namespace ::com::sun::star;
 using namespace ::com::sun::star::accessibility;
 
+/**
+ The listener is an internal class to prevent reference-counting cycles and therefore memory leaks.
+*/
+typedef cppu::WeakComponentImplHelper<
+                css::accessibility::XAccessibleEventListener
+                > ScAccessibleContextBaseEventListenerWeakImpl;
+class ScAccessibleContextBase::ScAccessibleContextBaseEventListener : public cppu::BaseMutex, public ScAccessibleContextBaseEventListenerWeakImpl
+{
+public:
+    ScAccessibleContextBaseEventListener(ScAccessibleContextBase& rBase)
+        : ScAccessibleContextBaseEventListenerWeakImpl(m_aMutex), mrBase(rBase) {}
+
+    using WeakComponentImplHelperBase::disposing;
+
+    ///=====  XAccessibleEventListener  ========================================
+
+    virtual void SAL_CALL disposing( const lang::EventObject& rSource ) override
+    {
+        SolarMutexGuard aGuard;
+        if (rSource.Source == mrBase.mxParent)
+            dispose();
+    }
+
+    virtual void SAL_CALL
+        notifyEvent(
+        const css::accessibility::AccessibleEventObject& /*aEvent*/ ) override {}
+private:
+    ScAccessibleContextBase& mrBase;
+};
+
+
 ScAccessibleContextBase::ScAccessibleContextBase(
                                                  uno::Reference<XAccessible> xParent,
                                                  const sal_Int16 aRole)
@@ -67,7 +98,11 @@ void ScAccessibleContextBase::Init()
     {
         uno::Reference< XAccessibleEventBroadcaster > xBroadcaster (mxParent->getAccessibleContext(), uno::UNO_QUERY);
         if (xBroadcaster.is())
-            xBroadcaster->addAccessibleEventListener(this);
+        {
+            if (!mxEventListener)
+                mxEventListener = new ScAccessibleContextBaseEventListener(*this);
+            xBroadcaster->addAccessibleEventListener(mxEventListener);
+        }
     }
     msName = createAccessibleName();
     msDescription = createAccessibleDescription();
@@ -91,8 +126,8 @@ void SAL_CALL ScAccessibleContextBase::disposing()
     if (mxParent.is())
     {
         uno::Reference< XAccessibleEventBroadcaster > xBroadcaster (mxParent->getAccessibleContext(), uno::UNO_QUERY);
-        if (xBroadcaster.is())
-            xBroadcaster->removeAccessibleEventListener(this);
+        if (xBroadcaster && mxEventListener)
+            xBroadcaster->removeAccessibleEventListener(mxEventListener);
         mxParent = nullptr;
     }
 }
@@ -376,21 +411,6 @@ void SAL_CALL
         comphelper::AccessibleEventNotifier::revokeClient( mnClientId );
         mnClientId = 0;
     }
-}
-
-    //=====  XAccessibleEventListener  ========================================
-
-void SAL_CALL ScAccessibleContextBase::disposing(
-    const lang::EventObject& rSource )
-{
-    SolarMutexGuard aGuard;
-    if (rSource.Source == mxParent)
-        dispose();
-}
-
-void SAL_CALL ScAccessibleContextBase::notifyEvent(
-        const AccessibleEventObject& /* aEvent */ )
-{
 }
 
 // XServiceInfo
