sc/CppunitTest_sc_a11y.mk
@@ -16,6 +16,7 @@ $(eval $(call gb_CppunitTest_add_exception_objects,sc_a11y, \
 $(eval $(call gb_CppunitTest_use_libraries,sc_a11y, \
 	sal \
 	cppu \
+	cppuhelper \
 	subsequenttest \
 	test \
 	tl \
